--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,3 +1,23 @@
 <h3>
-  Total people who live here: <%= @members.count %>
+  Total people who live here: <%= @member_count %>
 </h3>
+
+<% @members.each do |member| %>
+  <section class="members">
+    <p class="name">
+      <%= member[:name] %>
+    </p>
+
+    <p class="allies">
+      <%= member[:allies] %>
+    </p>
+
+    <p class="enemies">
+      <%= member[:enemies] %>
+    </p>
+
+    <p class="affiliations">
+      <%= member[:affiliations] %>
+    </p>
+  </section>
+<% end %>
