--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Search Results for <%= @query %></h1>
 Total Members: <%= @members.count %>
-<% @members.each do |member| %>
+<% @first_25_members.each do |member| %>
   <p>
   <h2><%= member.name %></h2>
   <% if member.photo_url %>
@@ -24,6 +24,7 @@ Total Members: <%= @members.count %>
   <% end %>
   <h3>Affiliation:</h3>
   <%= member.affiliation %><br>
-<p></p>
+<p>
+<p>
 <% end %>
 
