test: that character attributes and image is appearing on page

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -2,6 +2,7 @@
 <hr>
 
   <% @characters.each do |character| %>
+    <div class='character'>
       <% if character.img_url %>
         <%= image_tag character.img_url %>
       <% end %><br>
@@ -18,5 +19,6 @@
         Enemies: None
       <% end %><br>
       Affiliation: <%= character.affiliation %>
+    </div>
     <hr>
   <% end %>
