--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -4,10 +4,11 @@
   <% @members[0..24].each do |member| %>
     <div id="member-<%= member.name %>">
       <%= "Name: #{member.name}" %><br>
-      <img src=<%= member.photo_url %>>
-      <%= "Allies: #{member.allies}" %><br>
-      <%= "Enemies: #{member.enemies}" %><br>
+      <img src=<%= member.photo_url %>><br>
+      <%= "Allies: #{member.allies.join("\ ")}" %><br>
+      <%= "Enemies: #{member.enemies.join("\ ")}" %><br>
       <%= "Affiliations: #{member.affiliation}" %><br>
+      <h4>---------------------------------------</h4><br>
     </div>
   <% end %>
 </div>
