feat: Add list of allies or none to view page

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,2 +1,12 @@
 <h1><%= @nation %> Members </h1>
 <h3>There are <%= @total_members %> Total Members of <%= @nation %> </h2>
+<p> <% @member_list.each do |member| %> </p>
+      <p> Name: <%= member[:name] %> </p>
+      <% if member[:allies] == [] %>
+        <p> Allies: None </p>
+      <% else %>
+        <p> Allies: <%= member[:allies] %> </p>
+      <% end %>
+      <p> Enemies: <%= member[:enemies] %>
+      <br><br>
+    <% end %>
