--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,7 +1,8 @@
 <h1>Search Results</h1>
 <h4>Total Members: <%= @results.count %> </h4>
 
-<% @results[0..25].each do |member| %>
+<% @results[0..24].each do |member| %>
+  <div id=<%= member.id %> >
   <p>Name: <%= member.name %></p>
   <img src=<%= member.photo %> style="width:150px;height:150;">
   <p>Allies: 
@@ -16,5 +17,5 @@
   </p>
   <p>Affiliation: <%= member.affiliation %></p>
   <br>
-
+  </div>
 <% end %>
