--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -4,10 +4,10 @@
 <h2>First <%= @first_25_members.size %> members: </h2>
 <% @first_25_members.each do |member| %>
   <div id="member">
-    <h3>Name: <%= member[:name] %></h3>
-    <p><img src=<%= member[:photoUrl] %>></p>
-    <p>Allies: <%= member[:allies].join(', ') %></p>
-    <p>Enemies: <%= member[:enemies].join(', ') %></p>
+    <h3>Name: <%= member.name %></h3>
+    <p><img src=<%= member.image %>></p>
+    <p>Allies: <%= member.allies %></p>
+    <p>Enemies: <%= member.enemies %></p>
     <br>
   </div>
 <% end %>
