add method for allies and enemies if none

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -6,8 +6,8 @@
   <div id="member">
     <h3>Name: <%= member.name %></h3>
     <p><img src=<%= member.image %>></p>
-    <p>Allies: <%= member.allies %></p>
-    <p>Enemies: <%= member.enemies %></p>
+    <p>Allies: <%= member.allies_check %></p>
+    <p>Enemies: <%= member.enemies_check %></p>
     <br>
   </div>
 <% end %>
