Adds #self.top_25_members_by_affiliation

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,3 +1,8 @@
 <h1><%= @nation %></h1>
 
-<p>Number of members: <%= @member_count %> 
+<p>Number of members: <%= @member_count %>
+
+<h2><%= @nation %> Members</h2>
+<section id="members">
+  
+</section>
