add missed affiliation attribute

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -8,6 +8,7 @@
     <p><img src=<%= member.image %>></p>
     <p>Allies: <%= member.allies_check %></p>
     <p>Enemies: <%= member.enemies_check %></p>
+    <p>Affiliation: <%= member.affiliation %></p>
     <br>
   </div>
 <% end %>
