attemps to refactor

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -5,5 +5,7 @@ Name: <%= n[:name] %><br>
 Photo: <%= n[:photoUrl] %><br>
 Allies: <%= n[:allies] %><br>
 Enemies: <%= n[:enemies] %><br>
+<div id='aff'>
 Affiliation: <%= n[:affiliation] %><br><br>
+</div>
 <% end %>
