Add photo and more info for first 20 characters

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -2,6 +2,15 @@
 Number of members: <%= @members.count %><br>
 <p> 
 <% @members.each.with_index(1) do |m, i| %>
-<%= "##{i}: #{m[:name]}"%><br>
+  <p>
+  <%= "##{i}: #{m[:name]}"%><br>
+  <% if i <= 20 %>
+    <img src=<%=m[:photoUrl]%> alt=<%=m[:name]%>><br>
+    Enemies:
+    <% m[:enemies].each do |e| %>
+      <%= e %>
+    <% end %>
+  <% end %>
+  </p>
 <% end %>
 </p>
